# misosoup

./: .gitignore  Cargo.toml  README.md  circle.yml  rustfmt.toml
benches/: simple.rs
examples/: query_parser.rs  simple.rs  simple_parser.rs  train.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: bit.rs  errors.rs  lib.rs  parser.rs  pattern_tree.rs  query.rs  query_parser.rs  value.rs
src/index_builder/: builder.rs  index.rs  mod.rs
src/index_builder/backend/: avx.rs  fallback.rs  mod.rs  sse2.rs
