[package]
name = "mison"
version = "0.1.0"
authors = ["Yusuke Sasaki <y_sasaki@nuem.nagoya-u.ac.jp>"]

[dependencies]
num = "*"
error-chain = "*"
stdsimd = { version = "*", optional = true }

[dev-dependencies]
maplit = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
pikkr = { git = "https://github.com/pikkr/pikkr.git" }

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[features]
default = []
simd-accel = ["stdsimd"]
avx-accel = ["stdsimd", "pikkr/avx-accel"]
