[package]
name = "mison"
version = "0.1.0"
edition = "2018"
authors = ["Yusuke Sasaki <y_sasaki@nuem.nagoya-u.ac.jp>"]

[dependencies]
fnv = "*"
num = "*"
error-chain = "*"
itertools = "*"
linear-map = "*"
smallvec = "*"
packed_simd = { version = "*", optional = true }

[dev-dependencies]
maplit = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
pikkr = { git = "https://github.com/pikkr/pikkr.git" }

[profile.release]
debug = true
opt-level = 3

[profile.bench]
debug = true
opt-level = 3

[features]
default = []
simd-accel = ["packed_simd"]
avx-accel = ["packed_simd", "pikkr/avx-accel"]
